--- a/src/css/App.css
+++ b/src/css/App.css
@@ -43,8 +43,8 @@
   width: 50px;
   height: 100%px;
   object-fit: contain;
-  background-color: #f5f5f5;
-  border: 1px solid #eee;
+  //background-color: #f5f5f5;
+  //border: 1px solid #eee;
   margin: 0 auto;
 }
 
