--- a/src/css/OverlayImage.css
+++ b/src/css/OverlayImage.css
@@ -2,3 +2,25 @@
     text-align: center;
     margin: 20px;
 }
+
+.imagen-start-per  {
+    color: gold;
+    margin-right: 10px;
+    scale: 1.5;
+}
+
+.firs-position {
+    color: gold;
+   text-shadow: 2px 1px 2px black, 0 0 25px blue, 0 0 5px red;
+}
+
+.second-position {
+    color: #8a9597;
+   text-shadow: 2px 1px 2px black, 0 0 25px blue, 0 0 5px red;
+}
+
+.third-position {
+    color: #B87333;
+   text-shadow: 2px 1px 2px black, 0 0 25px blue, 0 0 5px red;
+}
+
